# Args

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD.md
doc/: examples.md
docs/: argparsor.md  args.md  argument.md  dest.md  examples.md  parse.md  usage.md  usageWidth.md
etc/cmake/: CodeCoverage.cmake
etc/script/: amalgamate.py  config_argparsor.json  config_args.json
example/: CMakeLists.txt  all.cpp  allType.cpp  append1.cpp  append3.cpp  argument.cpp  argument1.cpp  argument3.cpp  custom-valid-transform.cpp  default-valid.cpp  default-value.cpp  example.md  extend1.cpp  extend3.cpp  help.cpp  infinite-argument.cpp  infinite-number-argument.cpp  infinite.cpp  main.cpp  none1.cpp  none3.cpp  quickstart.cpp  storeFalse.cpp  storeTrue.cpp  usageWidth.cpp  version.cpp  widthArgument.cpp
include/: argparsor.h  optparsor.h  optparsor.hpp
include/blet/: args.h
include/blet/args/: action.h  args.h  argument.h  exception.h  usage.h  utils.h  valid.h  vector.h
include/mblet/: argparsor-action.h  argparsor-argparsor.h  argparsor-argument.h  argparsor-exception.h  argparsor-utils.h  argparsor-valid.h  argparsor-vector.h  argparsor.h
include/mblet/argparsor/: action.h  argparsor.h  argument.h  exception.h  usage.h  utils.h  valid.h  vector.h
single_include/: CMakeLists.txt  amalgamate_config.json
single_include/blet/: args.h
single_include/mblet/: argparsor.h
single_include/test/: CMakeLists.txt  already_include.cpp  already_include.h  main.cpp
src/: argparsor-argparsor.cpp  argparsor-argument.cpp  argparsor-exception.cpp  argparsor-usage.cpp  argparsor-valid.cpp  argparsor.cpp  args.cpp  argument.cpp  exception.cpp  optparsor.cpp  usage.cpp  valid.cpp
test/: CMakeLists.txt  abbreviatedOptions.cpp  accessDenied.cpp  addArgument.cpp  addBooleanOption.cpp  addInfiniteOption.cpp  addMultiOption.cpp  addNumberOption.cpp  addPositionnalArgument.cpp  addSimpleOption.cpp  construct.cpp  getOption.cpp  getUsage.cpp  getValue.cpp  getVersion.cpp  parseArguments.cpp  parseArgumentsAlternative.cpp  removeArguments.cpp  setHelpArgument.cpp  updateArgument.cpp
test/include/mock/: mockc.h
